--- a/RichTextCleaner/RichTextCleaner.csproj
+++ b/RichTextCleaner/RichTextCleaner.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RichTextCleaner.Common\RichTextCleaner.Common.csproj" />
+  </ItemGroup>
+
 </Project>
