--- a/RichTextCleanerFW/RichTextCleanerFW.csproj
+++ b/RichTextCleanerFW/RichTextCleanerFW.csproj
@@ -121,7 +121,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icojam-Blue-Bits-Document-check.ico" />
+    <Resource Include="Icojam-Blue-Bits-Document-check.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.VersionCheckAnalyzer.2.9.8\analyzers\dotnet\cs\Microsoft.CodeAnalysis.VersionCheckAnalyzer.resources.dll" />
