--- a/RichTextCleaner.Common/RichTextCleaner.Common.csproj
+++ b/RichTextCleaner.Common/RichTextCleaner.Common.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyVersion>1.6.1.0</AssemblyVersion>
+    <Authors>Hans Kesting</Authors>
+    <Version>1.6.0</Version>
+    <Copyright>Hans Kesting 2019-2020</Copyright>
+    <FileVersion>1.6.1.0</FileVersion>
+    <Company>EPAM Systems</Company>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\w\me\RichTextCleaner\RichTextCleaner.Common\RichTextCleaner.Common.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
