--- a/RichTextCleaner.Common/RichTextCleaner.Common.csproj
+++ b/RichTextCleaner.Common/RichTextCleaner.Common.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>1.6.1.0</AssemblyVersion>
+    <AssemblyVersion>1.7.0.0</AssemblyVersion>
     <Authors>Hans Kesting</Authors>
     <Version>1.6.0</Version>
     <Copyright>Hans Kesting 2019-2020</Copyright>
-    <FileVersion>1.6.1.0</FileVersion>
+    <FileVersion>1.6.0.0</FileVersion>
     <Company>EPAM Systems</Company>
   </PropertyGroup>
 
