add code to cean up quotes (no UI yet)

--- a/RichTextCleaner.Test/RichTextCleaner.Test.csproj
+++ b/RichTextCleaner.Test/RichTextCleaner.Test.csproj
@@ -63,6 +63,7 @@
     <Compile Include="TestNonCMS.cs" />
     <Compile Include="TestTrimParagraph.cs" />
     <Compile Include="TestAnchorsAndLinks.cs" />
+    <Compile Include="TestQuoteUpdate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
