--- a/RichTextCleanerFW/RichTextCleanerFW.csproj
+++ b/RichTextCleanerFW/RichTextCleanerFW.csproj
@@ -79,6 +79,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ClipboardHelper.cs" />
+    <Compile Include="Converters\HtmlToSyntaxHighlightConverter.cs" />
     <Compile Include="Converters\StringToSimpleInlineConverter.cs" />
     <Compile Include="Converters\TextBlockExtensions.cs" />
     <Compile Include="Logging\Logger.cs" />
