--- a/RichTextCleanerFW/RichTextCleanerFW.csproj
+++ b/RichTextCleanerFW/RichTextCleanerFW.csproj
@@ -12,7 +12,7 @@
     <ProjectGuid>{4C185AEC-138E-43EF-9A44-8FB3850A2B51}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>RichTextCleanerFW</RootNamespace>
-    <AssemblyName>RichTextCleanerFW</AssemblyName>
+    <AssemblyName>RichTextCleaner</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
