change setting defaults

--- a/RichTextCleanerFW/App.config
+++ b/RichTextCleanerFW/App.config
@@ -14,7 +14,7 @@
                 <value>True</value>
             </setting>
             <setting name="RemoveItalic" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="RemoveUnderline" serializeAs="String">
                 <value>True</value>
@@ -23,7 +23,7 @@
                 <value>True</value>
             </setting>
             <setting name="QuoteProcess" serializeAs="String">
-                <value>0</value>
+                <value>2</value>
             </setting>
         </RichTextCleanerFW.Properties.Settings>
     </userSettings>
