--- a/RichTextCleanerFW/Properties/Settings.settings
+++ b/RichTextCleanerFW/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="RemoveItalic" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="RemoveUnderline" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="QuoteProcess" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">2</Value>
     </Setting>
   </Settings>
 </SettingsFile>
