--- a/RichTextCleanerFW/RichTextCleanerFW.csproj
+++ b/RichTextCleanerFW/RichTextCleanerFW.csproj
@@ -100,6 +100,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\BindableLinkDescription.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
