--- a/RichTextCleanerFW/App.config
+++ b/RichTextCleanerFW/App.config
@@ -25,6 +25,9 @@
             <setting name="QuoteProcess" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="QueryCleanLevel" serializeAs="String">
+                <value>0</value>
+            </setting>
         </RichTextCleanerFW.Properties.Settings>
     </userSettings>
 </configuration>
