--- a/RichTextCleanerFW/Properties/Settings.settings
+++ b/RichTextCleanerFW/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="QuoteProcess" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
+    <Setting Name="QueryCleanLevel" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
