simplified passing of settings

--- a/RichTextCleanerFW/App.config
+++ b/RichTextCleanerFW/App.config
@@ -28,6 +28,9 @@
             <setting name="QueryCleanLevel" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="CreateLinkFromText" serializeAs="String">
+                <value>True</value>
+            </setting>
         </RichTextCleanerFW.Properties.Settings>
     </userSettings>
 </configuration>
