--- a/RichTextCleanerFW/Properties/Settings.settings
+++ b/RichTextCleanerFW/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="QueryCleanLevel" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="CreateLinkFromText" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
