updated the Core3 version (not UWP)

--- a/RichTextCleaner/RichTextCleaner.csproj
+++ b/RichTextCleaner/RichTextCleaner.csproj
@@ -8,7 +8,14 @@
     <StartupObject>RichTextCleaner.App</StartupObject>
     <Authors>Hans Kesting</Authors>
     <Product>Rich Text Cleaner</Product>
+    <AssemblyVersion>3.2.5.0</AssemblyVersion>
+    <FileVersion>3.2.5.0</FileVersion>
+    <Version>3.2.5</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Icojam-Blue-Bits-Document-check.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.17" />
@@ -24,6 +31,42 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RichTextCleaner.Common\RichTextCleaner.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Icojam-Blue-Bits-Document-check.ico">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Forms\LinkCheckerWindow.xaml.cs">
+      <DependentUpon>LinkCheckerWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Forms\SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Forms\LinkCheckerWindow.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Forms\SettingsWindow.xaml">
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
 
 </Project>
