Process keypress on UI thread, even after resume

--- a/RichTextCleanerUwp/RichTextCleanerUwp.csproj
+++ b/RichTextCleanerUwp/RichTextCleanerUwp.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Forms\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\DispatcherExtensions.cs" />
     <Compile Include="Models\BindableLinkDescription.cs" />
     <Compile Include="Models\CleanerSettings.cs" />
     <Compile Include="Models\LinkModificationEventArgs.cs" />
