Remove Office markup (when copying from Wor or Outlook)

--- a/RichTextCleaner.Test/RichTextCleaner.Test.csproj
+++ b/RichTextCleaner.Test/RichTextCleaner.Test.csproj
@@ -64,6 +64,7 @@
     <Compile Include="TestTrimParagraph.cs" />
     <Compile Include="TestAnchorsAndLinks.cs" />
     <Compile Include="TestQuoteUpdate.cs" />
+    <Compile Include="TestOfficeMarkup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
