--- a/RichTextCleanerUwp/RichTextCleanerUwp.csproj
+++ b/RichTextCleanerUwp/RichTextCleanerUwp.csproj
@@ -231,6 +231,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
+    <PackageReference Include="System.Xml.XPath.XmlDocument">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RichTextCleaner.Common\RichTextCleaner.Common.csproj">
