fix bug: lone IMG in P without text was removed; deploy 3.4.3

--- a/RichTextCleaner.Test/RichTextCleaner.Test.csproj
+++ b/RichTextCleaner.Test/RichTextCleaner.Test.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultSettings.cs" />
     <Compile Include="DocTester.cs" />
     <Compile Include="TestTextCleaner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
