--- a/RichTextCleaner/RichTextCleaner.csproj
+++ b/RichTextCleaner/RichTextCleaner.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
     <StartupObject>RichTextCleaner.App</StartupObject>
@@ -11,13 +11,11 @@
     <AssemblyVersion>3.2.6.0</AssemblyVersion>
     <FileVersion>3.2.6.0</FileVersion>
     <Version>3.2.6</Version>
+    <Copyright>Copyright © Hans Kesting 2020 - 2025</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Icojam-Blue-Bits-Document-check.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.24" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
